Перешел на многомодульную архитектуру